--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 /**
- * In-Line Text Edit - CSS Temp
- * April 3, 2009
+ * Inline Text Editing 1.2 - CSS Temp
+ * August 22, 2009
  * Corey Hart @ http://www.codenothing.com
- */
+ */ 
 
 textarea {
 	width: 300px;
