--- a/docs/styles.css
+++ b/docs/styles.css
@@ -29,6 +29,11 @@ p {
 	width: 600px;
 }
 
+p.notes {
+	margin: -30px 0 40px 0;
+	width: 600px;
+}
+
 a {
 	color: blue;
 	text-decoration: none;
@@ -57,6 +62,21 @@ h3 a {
 	font-size: 9pt;
 	padding-top:2px;
 	color: #e9e9e9;
+}
+
+
+/* ui object menu */
+ul.ui {
+	list-style: none;
+	margin:-50px 0 60px 0;
+	padding:0 15px;
+	width: 500px;
+}
+
+ul.ui .title {
+	font-size: 9pt;
+	font-style: italic;
+	color: #989898;
 }
 
 
