--- a/demo/styles2.css
+++ b/demo/styles2.css
@@ -1,6 +1,6 @@
 /**
- * Inline Text Editing [VERSION] - CSS Temp
- * [DATE]
+ * Inline Text Editing 1.3 - CSS Temp
+ * April 26, 2010
  * Corey Hart @ http://www.codenothing.com
  */ 
 
