--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,6 +1,6 @@
 /**
- * Inline Text Editing [VERSION]
- * [DATE]
+ * Inline Text Editing 1.3
+ * April 26, 2010
  * Corey Hart @ http://www.codenothing.com
  */ 
 
